# CaipeDeepevalEvaluation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gate_summary.md  gate_thresholds.yaml  pyproject.toml  requirements.txt  scripts
.agents/: AGENTS.md
batch_eval/: aggregate_results.py  aggregate_topk_results.py  batch_configs.json  run_batch.py  run_batch_topk.py
caipe_eval_db/: docker-compose.postgres.yml  load_results.py  postgres-nodeport.yaml  schema.sql
docs/: agentic_rag.md  architecture.md  cicd_quality_gate.md  enterprise_rag_bench.md  eval_results_database.md  evaluation_pipeline.md  hotpotqa.md  precomputed_evaluation.md  project_structure.md  rest_api_service.md  results_summary.md  setup_and_usage.md
scripts/: eval_enterprise.cmd  eval_enterprise.sh  eval_enterprise_agentic.cmd  eval_enterprise_agentic.sh  eval_hotpotqa.cmd  eval_hotpotqa.sh  eval_hotpotqa_agentic.cmd  eval_hotpotqa_agentic.sh  eval_precomputed.cmd  eval_precomputed.sh  ingest_enterprise.cmd  ingest_enterprise.sh  ingest_hotpotqa.cmd  ingest_hotpotqa.sh  run_eval_enterprise_rag_bench.sh  run_eval_hotpotqa.sh  run_eval_precomputed_enterprise.sh  run_eval_precomputed_hotpotqa.sh  send_eval_request_enterprise_upload.sh  start_api_server.sh  start_api_server_auth.sh  start_api_server_auth_db.sh
tests/: test_agentic_rag.py  test_api.py  test_auth.py  test_caipe_client.py  test_config.py  test_data_loader.py  test_datasets.py  test_deepeval_serialization.py  test_eval_engine.py  test_evaluator_runners.py  test_gate.py  test_ingest.py  test_io_utils.py  (+8 more)
(+32 files in other folders)
