[build-system]
requires = ['setuptools>=45', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'caipe-deepeval-evaluation'
version = '0.1.0'
description = 'CAIPE DeepEval evaluation scripts for EnterpriseRAG-Bench and HotpotQA'
requires-python = '>=3.13'
dependencies = [
  'deepeval',
  'httpx',
  'requests',
  'pydantic',
  'pyyaml',
  'fastapi',
  'uvicorn',
  'python-multipart',
  'pyjwt',
  'cryptography',
]

[tool.coverage.run]
branch = true

[dependency-groups]
dev = [
  "ruff",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP042"]